--- a/frontend/src/app/articles/articles.component.scss
+++ b/frontend/src/app/articles/articles.component.scss
@@ -11,7 +11,7 @@
 
 .card-grid {
   display: grid;
-  gap: 8px;
+  gap: 16px;
   grid-template-columns: 1fr;
   width: 100%;
   margin: 0 auto;
